Test class initialization

--- a/record-shop/main/default/classes/WebPushNotification.cls
+++ b/record-shop/main/default/classes/WebPushNotification.cls
@@ -23,42 +23,53 @@ public with sharing class WebPushNotification implements Queueable, Database.All
 
     public void execute(QueueableContext context) {
         for (Subscription__c subscription : subscriptions) {
-            HttpRequest request = new HttpRequest();
-            request.setEndpoint('callout:WebPushNotification' + '/sendNotification');
-            request.setMethod('POST');
-            request.setHeader('Content-Type', 'application/json;charset=UTF-8');
-
-            JSONGenerator gen = JSON.createGenerator(false);
-            gen.writeStartObject();
-            gen.writeStringField('endpoint', subscription.Endpoint__c);
-            gen.writeStringField('p256dh', subscription.p256dh__c);
-            gen.writeStringField('auth', subscription.auth__c);
-            gen.writeStringField('vapidPublicKey', '{!$Credential.Username}');
-            gen.writeStringField('vapidPrivateKey', '{!$Credential.Password}');
-            gen.writeFieldName('payload');
-            gen.writeStartObject();
-            if(String.isNotBlank(title)) {
-                gen.writeStringField('title', title);
-            }
-            if(String.isNotBlank(body)) {
-                gen.writeStringField('body', body);
-            }
-            if(String.isNotBlank(icon)) {
-                gen.writeStringField('icon', icon);
-            }
-            if(String.isNotBlank(image)) {
-                gen.writeStringField('image', image);
-            }
-            if(String.isNotBlank(badge)) {
-                gen.writeStringField('badge', badge);
-            }
-            gen.writeEndObject();
-            gen.writeEndObject();
-            gen.close();
-            request.setBody(gen.getAsString());
-
-            HttpResponse response = new Http().send(request);
+            sendSingleWebPushNotification(subscription, title, body, icon, image, badge);
         }
+    }
+
+    @TestVisible
+    private static HttpResponse sendSingleWebPushNotification(Subscription__c subscription,
+                                                              String title,
+                                                              String body,
+                                                              String icon,
+                                                              String image,
+                                                              String badge) {
+        HttpRequest request = new HttpRequest();
+        request.setEndpoint('callout:WebPushNotification' + '/sendNotification');
+        request.setMethod('POST');
+        request.setHeader('Content-Type', 'application/json;charset=UTF-8');
+
+        JSONGenerator generator = JSON.createGenerator(false);
+        generator.writeStartObject();
+        generator.writeStringField('endpoint', subscription.Endpoint__c);
+        generator.writeStringField('p256dh', subscription.p256dh__c);
+        generator.writeStringField('auth', subscription.auth__c);
+        generator.writeStringField('vapidPublicKey', '{!$Credential.Username}');
+        generator.writeStringField('vapidPrivateKey', '{!$Credential.Password}');
+        generator.writeFieldName('payload');
+        generator.writeStartObject();
+        if(String.isNotBlank(title)) {
+            generator.writeStringField('title', title);
+        }
+        if(String.isNotBlank(body)) {
+            generator.writeStringField('body', body);
+        }
+        if(String.isNotBlank(icon)) {
+            generator.writeStringField('icon', icon);
+        }
+        if(String.isNotBlank(image)) {
+            generator.writeStringField('image', image);
+        }
+        if(String.isNotBlank(badge)) {
+            generator.writeStringField('badge', badge);
+        }
+        generator.writeEndObject();
+        generator.writeEndObject();
+        generator.close();
+        request.setBody(generator.getAsString());
+
+        HttpResponse response = new Http().send(request);
+        return response;
     }
     
 }
