Bulkification of the callout to the generator

--- a/record-shop/main/default/classes/WebPushNotification.cls
+++ b/record-shop/main/default/classes/WebPushNotification.cls
@@ -1,69 +1,69 @@
+/**
+ * @author Rémi Le Guin
+ * @date 01/03/2021
+ * @description Queueable class using a generator to send web push notifications.
+ */
 public with sharing class WebPushNotification implements Queueable, Database.AllowsCallouts {
 
-    public List<Subscription__c> subscriptions;
-    public String title;
-    public String body;
-    public String icon;
-    public String image;
-    public String badge;
+    public Subscription__c[] subscriptions;
+    public SObject[] records;
+    public String payloadType;
 
-    public WebPushNotification(List<Subscription__c> subscriptions,
-                               String title,
-                               String body,
-                               String icon,
-                               String image,
-                               String badge) {
+    public WebPushNotification(Subscription__c[] subscriptions, SObject[] records, String payloadType) {
         this.subscriptions = subscriptions;
-        this.title = title;
-        this.body = body;
-        this.icon = icon;
-        this.image = image;
-        this.badge = badge;
+        this.records = records;
+        this.payloadType = payloadType;
     }
 
+    /**
+     * @description Once the job is enqueued, standard method listing methods to execute for classes which implement queueable.
+     * @param context Standard parameter to instanciate a job.
+     */
     public void execute(QueueableContext context) {
-        for (Subscription__c subscription : subscriptions) {
-            sendSingleWebPushNotification(subscription, title, body, icon, image, badge);
+        PayloadComposition payloadCompositionInstance = (PayloadComposition)Type.forName(payloadType)?.newInstance();
+        if (payloadCompositionInstance != null && records != null && !records.isEmpty()) {
+            WebPushNotificationPayload[] payloads = new WebPushNotificationPayload[] {};
+            for (SObject record : records) {
+                WebPushNotificationPayload payload = payloadCompositionInstance.getPayload(record);
+                if (payload != null && String.isNotBlank(payload.title)) {
+                    payloads.add(payload);
+                }
+            }
+            if (subscriptions != null && !subscriptions.isEmpty() && !payloads.isEmpty()) {
+                sendNotifications(subscriptions, payloads);
+            }
         }
     }
 
+    /**
+     * @description Compose a WebPushNotificationPayload object ready to be serialized.
+     * @param subscriptions List of subscriptions SObject records to send a notification to.
+     * @param payloads List of payloads containing information to display in the notification.
+     * @return Webservice response from the generator.
+     */
     @TestVisible
-    private static HttpResponse sendSingleWebPushNotification(Subscription__c subscription,
-                                                              String title,
-                                                              String body,
-                                                              String icon,
-                                                              String image,
-                                                              String badge) {
+    private static HttpResponse sendNotifications(Subscription__c[] subscriptions, WebPushNotificationPayload[] payloads) {
         HttpRequest request = new HttpRequest();
-        request.setEndpoint('callout:WebPushNotification' + '/sendNotification');
+        request.setEndpoint('callout:WebPushNotification' + '/sendNotifications');
         request.setMethod('POST');
         request.setHeader('Content-Type', 'application/json;charset=UTF-8');
 
         JSONGenerator generator = JSON.createGenerator(false);
         generator.writeStartObject();
-        generator.writeStringField('endpoint', subscription.Endpoint__c);
-        generator.writeStringField('p256dh', subscription.p256dh__c);
-        generator.writeStringField('auth', subscription.auth__c);
         generator.writeStringField('vapidPublicKey', '{!$Credential.Username}');
         generator.writeStringField('vapidPrivateKey', '{!$Credential.Password}');
-        generator.writeFieldName('payload');
-        generator.writeStartObject();
-        if(String.isNotBlank(title)) {
-            generator.writeStringField('title', title);
+        generator.writeFieldName('payloads');
+        generator.writeObject(payloads);
+        generator.writeFieldName('subscriptions');
+        generator.writeStartArray();
+        for (Subscription__c subscription : subscriptions) {
+            generator.writeStartObject();
+            generator.writeStringField('endpoint', subscription.endpoint__c);
+            generator.writeStringField('p256dh', subscription.p256dh__c);
+            generator.writeStringField('auth', subscription.auth__c);
+            generator.writeEndObject();
         }
-        if(String.isNotBlank(body)) {
-            generator.writeStringField('body', body);
-        }
-        if(String.isNotBlank(icon)) {
-            generator.writeStringField('icon', icon);
-        }
-        if(String.isNotBlank(image)) {
-            generator.writeStringField('image', image);
-        }
-        if(String.isNotBlank(badge)) {
-            generator.writeStringField('badge', badge);
-        }
-        generator.writeEndObject();
+        generator.writeEndArray();
         generator.writeEndObject();
         generator.close();
         request.setBody(generator.getAsString());
@@ -71,5 +71,5 @@ public with sharing class WebPushNotification implements Queueable, Database.All
         HttpResponse response = new Http().send(request);
         return response;
     }
-    
+
 }
