--- a/record-shop/main/default/classes/WebPushNotification_Mock.cls
+++ b/record-shop/main/default/classes/WebPushNotification_Mock.cls
@@ -2,10 +2,10 @@
 global class WebPushNotification_Mock implements HttpCalloutMock {
 
     global HttpResponse respond(HttpRequest request) {
-        System.assertEquals('callout:WebPushNotification' + '/sendNotification', request.getEndpoint());
+        System.assertEquals('callout:WebPushNotification' + '/sendNotifications', request.getEndpoint());
         System.assertEquals('POST', request.getMethod());
         HttpResponse response = new HttpResponse();
-        response.setBody('Notification OK');
+        response.setBody('Notification sent');
         response.setStatusCode(201);
         return response;
     }
